--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- NAVBAR -->
 
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #092337cf;">
-        <!-- esto agregué (eliminar esta línea cuando funcione) -->
+        <!-- hacer que cambie de color al pasar el mouse por encima, lo demás está listo (eliminar esta línea cuando funcione) -->
         <div class="container-fluid">
             <a class="navbar-brand titulo" href="#">
                 <img src="assets/img/Logo-OPSO transparente.png" alt="Logo-OPSO" width="70" height="40">
@@ -55,11 +55,58 @@
                     <li class="nav-item ms-3">
                         <a class="nav-link active" href="#">Contacto</a>
                     </li>
-
                 </ul>
             </div>
         </div>
     </nav>
+
+    <!-- CARROUSEL FOTOS -->
+
+    <SEction>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/16722460_10157954243965538_7633342056087053500_o.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Campamento 2016</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/Foto Oficial OPSO 2020.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>OPSO 2020</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </SEction>
 
 
 
