--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <!-- NAVBAR -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #092337cf;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top pt-1" style="background-color: #092337cf;">
         <!-- hacer que cambie de color al pasar el mouse por encima, lo demás está listo (eliminar esta línea cuando funcione) -->
         <div class="container-fluid">
             <a class="navbar-brand titulo" href="#">
@@ -61,54 +61,70 @@
     </nav>
 
     <!-- CARROUSEL FOTOS -->
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 ">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="assets/img/carrousel/prueba tamaño.png" class="d-block w-100" alt="imagen1">
+                                <div class="carousel-caption d-none d-md-block">
+                                </div>
+                            </div>
 
-    <SEction>
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="assets/img/16722460_10157954243965538_7633342056087053500_o.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Campamento 2016</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                            <div class="carousel-item active">
+                                <img src="assets/img/carrousel/oficial2020.png" class="d-block w-100" alt="imagen1">
+                                <div class="carousel-caption d-none d-md-block">
+                                </div>
+                            </div>
+
+                            <div class="carousel-item active">
+                                <img src="assets/img/carrousel/oficial2016.png" class="d-block w-100" alt="imagen1">
+                                <div class="carousel-caption d-none d-md-block">
+                                </div>
+                            </div>
+
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="assets/img/Foto Oficial OPSO 2020.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>OPSO 2020</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    </section>
+
+    <!-- CARDS -->
+    <section class="container">
+        <div>
+            <h3 id="destacados" class="text-center mt-5 mb-2" style="color: #0b9fef;">Operativos Realizados</h3>
+            <hr color="#0b9fef" width=100% size=6rem class="mx-auto">
         </div>
-    </SEction>
 
+        <div class="container-fluid">
+            <div class="row no-gutters justify-content-md-center">
+                <div class="card bg-calipso mt-3 mb-2 col-12  col-md-2 mr-3" style="width: 18rem;">
+                    <img src="assets/img/card/afiche2012.jpg" class="card-img-top img-fluid" alt="Tarjeta1">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">2012</h5>
+                        <p class="card-text text-justify">Operativo realizado en la localidad de Paredones, VI región.</p>
+                    </div>
 
+    </section>
 
 
 
