--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Dangrek&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
     <title>OPSO Central</title>
 </head>
@@ -121,10 +125,59 @@
                     <img src="assets/img/card/afiche2012.jpg" class="card-img-top img-fluid" alt="Tarjeta1">
                     <div class="card-body">
                         <h5 class="card-title text-center">2012</h5>
-                        <p class="card-text text-justify">Operativo realizado en la localidad de Paredones, VI región.</p>
+                        <p class="card-text text-justify">Operativo realizado en la localidad de Paredones, VI región.
+                        </p>
                     </div>
 
     </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <div style="color:rgb(35, 33, 53);">
+            <a href="https://www.instagram.com/opso.central/?igshid=Zjc2ZTc4Nzk%3D" target="_blank"><i class="fab fa-instagram-square fa-3x"
+                    style="color: #0b9fef"></i></a>
+        </div>
+        <div>
+            <a href="https://www.facebook.com/groups/167231836674009" target="_blank"><i class="fab fa-facebook-square fa-3x"
+                    style="color: #0b9fef"></i></a>
+        </div>
+        <div>
+            <a href="https://www.youtube.com/@opsocentral2869/featured" target="_blank"><i class="fab fa-youtube-square fa-3x"
+                    style="color: #0b9fef"></i></a>
+        </div>
+
+
+        <!-- ejemplo para footer -->
+        <div>
+            <section class="bg-calipso">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col-12 col-md-8">
+                            <h2 class="mt-2" style="color: #ffffff;">SIGUENOS</h2>
+                        </div>
+                        <div class="row mt-1 ml-5 mb-2">
+                            <div class="col-3 col-md-3">
+                                <a href="https://github.com" target="_blank"><i class="fab fa-github-square fa-3x"
+                                        style="color: #ffffff"></i></a>
+                            </div>
+                            <div class="col-3 col-md-3">
+                                <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin fa-3x"
+                                        style="color: #ffffff"></i></a>
+                            </div>
+                            <div class="col-3 col-md-3">
+                                <a href="https://www.twitter.com/" target="_blank"><i
+                                        class="fab fa-twitter-square fa-3x" style="color: #ffffff"></i></a>
+                            </div>
+                            <div class="col-3 col-md-3">
+                                <a href="https://www.facebook.com/" target="_blank"><i
+                                        class="fab fa-facebook-square fa-3x" style="color: #ffffff"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
+        </div>
+    </footer>
 
 
 
