--- a/index.html
+++ b/index.html
@@ -132,49 +132,31 @@
     </section>
 
     <!-- FOOTER -->
-    <footer>
-        <div style="color:rgb(35, 33, 53);">
-            <a href="https://www.instagram.com/opso.central/?igshid=Zjc2ZTc4Nzk%3D" target="_blank"><i class="fab fa-instagram-square fa-3x"
-                    style="color: #0b9fef"></i></a>
-        </div>
-        <div>
-            <a href="https://www.facebook.com/groups/167231836674009" target="_blank"><i class="fab fa-facebook-square fa-3x"
-                    style="color: #0b9fef"></i></a>
-        </div>
-        <div>
-            <a href="https://www.youtube.com/@opsocentral2869/featured" target="_blank"><i class="fab fa-youtube-square fa-3x"
-                    style="color: #0b9fef"></i></a>
-        </div>
-
-
-        <!-- ejemplo para footer -->
-        <div>
-            <section class="bg-calipso">
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col-12 col-md-8">
-                            <h2 class="mt-2" style="color: #ffffff;">SIGUENOS</h2>
-                        </div>
-                        <div class="row mt-1 ml-5 mb-2">
-                            <div class="col-3 col-md-3">
-                                <a href="https://github.com" target="_blank"><i class="fab fa-github-square fa-3x"
-                                        style="color: #ffffff"></i></a>
-                            </div>
-                            <div class="col-3 col-md-3">
-                                <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin fa-3x"
-                                        style="color: #ffffff"></i></a>
-                            </div>
-                            <div class="col-3 col-md-3">
-                                <a href="https://www.twitter.com/" target="_blank"><i
-                                        class="fab fa-twitter-square fa-3x" style="color: #ffffff"></i></a>
-                            </div>
-                            <div class="col-3 col-md-3">
-                                <a href="https://www.facebook.com/" target="_blank"><i
-                                        class="fab fa-facebook-square fa-3x" style="color: #ffffff"></i></a>
-                            </div>
-                        </div>
+    <footer class="container">
+        <div class="row">
+            <div class="col-6">
+                <h2 class="text-end me-5 pe-5" style="color: #0b9fef;">Síguenos</h2>
+                <div>
+                    <img src="assets/img/Logo-footer.png" class="d-block w-5 ms-5" alt="imagen1">
+                    <div>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-6">
+                <div style="color:rgb(35, 33, 53);">
+                    <a href="https://www.instagram.com/opso.central/?igshid=Zjc2ZTc4Nzk%3D" target="_blank"><i
+                            class="fab fa-instagram-square fa-3x" style="color: #0b9fef"> </i></a>
+                </div>
+                <div>
+                    <a href="https://www.facebook.com/groups/167231836674009" target="_blank"><i
+                            class="fab fa-facebook-square fa-3x" style="color: #0b9fef"></i></a>
+                </div>
+                <div>
+                    <a href="https://www.youtube.com/@opsocentral2869/featured" target="_blank"><i
+                            class="fab fa-youtube-square fa-3x" style="color: #0b9fef"></i></a>
+                </div>
+            </div>
         </div>
         </div>
     </footer>
