footer segunda parte

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="nav-link active" href="#">Sé voluntario</a>
                     </li>
                     <li class="nav-item ms-3">
-                        <a class="nav-link active" href="#">Contacto</a>
+                        <a class="nav-link active" href="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -132,7 +132,7 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="container">
+    <footer id="#contacto" class="container">
         <div class="row">
             <div class="col-6">
                 <h2 class="text-end me-5 pe-5" style="color: #0b9fef;">Síguenos</h2>
